<!--
  ~ Copyright (C) 2015 Jeremy Brown. Released under the Non-Profit Open Software License version 3.0 (NPOSL-3.0)
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ListView
		android:id="@+id/topTimes"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/lastTimeText"
		android:layout_alignParentTop="true" />

	<TextView
		android:id="@+id/lastTimeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="6dp"
		android:text="@string/elapsedTime"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_above="@+id/buttonsLayout"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true" />

	<TextView
		android:id="@+id/elapsedTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="6dp"
		android:text="@string/defaultTime"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_above="@+id/buttonsLayout"
		android:layout_toRightOf="@+id/lastTimeText"
		android:layout_toEndOf="@+id/lastTimeText" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		style="?android:buttonBarStyle"
		android:id="@+id/buttonsLayout"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">

		<Button
			style="?android:buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="StartNewGame"
			android:singleLine="true"
			android:text="@string/newGame"
			android:id="@+id/summNG" />

		<Button
			style="?android:buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="MainMenu"
			android:singleLine="true"
			android:text="@string/mainMenu"
			android:id="@+id/summMM" />
	</LinearLayout>

</RelativeLayout>