<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jeremy Brown. Released under the Non-Profit Open Software License version 3.0 (NPOSL-3.0)
  -->

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="?android:attr/listPreferredItemHeightSmall"
	android:padding="6dip">

	<TextView
		android:id="@+id/rank"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_alignParentBottom="true"
		android:layout_alignParentTop="true"
		android:layout_marginRight="6dip"
		android:layout_marginEnd="6dip"
		android:singleLine="true"
		android:src="@mipmap/ic_launcher"
		android:text="@string/defSummaryItemRank"
		android:textSize="24sp" />

	<TextView
		tools:ignore="SmallSp"
		android:id="@+id/secondLine"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_toRightOf="@id/rank"
		android:layout_toEndOf="@+id/rank"
		android:ellipsize="marquee"
		android:singleLine="true"
		android:text="@string/defSummaryItemDescription"
		android:textSize="8sp" />

	<TextView
		android:id="@+id/firstLine"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/secondLine"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentTop="true"
		android:layout_alignWithParentIfMissing="true"
		android:layout_toRightOf="@id/rank"
		android:layout_toEndOf="@id/rank"
		android:ellipsize="marquee"
		android:gravity="center_vertical"
		android:singleLine="true"
		android:text="@string/defSummaryGameOverview"
		android:textSize="12sp" />

</RelativeLayout>